Fixed Quick Access Glitch on Mobile

--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -23,7 +23,7 @@ h1 {
   position: sticky;
   top: 80px;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  z-index: 99;
+  z-index: 98;
 }
 
 .quick-access h3 {
